frame/support/test/tests/pallet_ui/storage_005.stderr
error: Invalid use of `#[pallet::storage]`, the type first generic argument must be `_`, the final argument is automatically set by macro.
  --> $DIR/storage_005.rs:19:30
   |
19 |     type Foo = StorageValueType<u8, u8>;
   |                                 ^^

error: expected `_`
  --> $DIR/storage_005.rs:19:30
   |
19 |     type Foo = StorageValueType<u8, u8>;
   |                                 ^^
